--- a/common_services/common_logic/pom.xml
+++ b/common_services/common_logic/pom.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-
  CDDL HEADER START
-
  The contents of this file are subject to the terms of the
  Common Development and Distribution License, Version 1.0 only
  (the "License"). You may not use this file except in compliance
  with the License.
-
  You can obtain a copy of the license at license/ESCIDOC.LICENSE
  or http://www.escidoc.de/license.
  See the License for the specific language governing permissions
  and limitations under the License.
-
  When distributing Covered Code, include this CDDL HEADER in each
  file and include the License file at license/ESCIDOC.LICENSE.
  If applicable, add the following below this CDDL HEADER, with the
  fields enclosed by brackets "[]" replaced with your own identifying
  information: Portions Copyright [yyyy] [name of copyright owner]
-
  CDDL HEADER END
-
-
  Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
  für wissenschaftlich-technische Information mbH and Max-Planck-
  Gesellschaft zur Förderung der Wissenschaft e.V.
@@ -39,28 +32,22 @@
 	<packaging>ejb</packaging>
 	<name>common_logic</name>
 	<version>1.1.60-SNAPSHOT</version>
-
 	<scm>
 		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_logic</connection>
 		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_logic</developerConnection>
 		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
-
 	<build>
 		<plugins>
-		 <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-ejb-plugin</artifactId>
-        <configuration>
-          <ejbVersion>3.0</ejbVersion>
-        </configuration>
-          </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<configuration>
+					<ejbVersion>3.0</ejbVersion>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -74,8 +61,7 @@
 						<configuration>
 							<tasks>
 								<taskdef classname="org.jibx.binding.ant.CompileTask" name="bind">
-									<classpath refid="maven.compile.classpath">
-									</classpath>
+									<classpath refid="maven.compile.classpath"></classpath>
 								</taskdef>
 								<bind load="true" verbose="false">
 									<bindingfileset dir="${project.build.outputDirectory}/jibx">
@@ -98,13 +84,10 @@
 										<include name="bindings_TocItemVO_output.xml" />
 										<include name="bindings_SearchResultVO_input.xml" />
 									</bindingfileset>
-									
 									<bindingfileset dir="${project.build.outputDirectory}/jibx/jibx_generated">
 										<include name="binding.xml" />
 									</bindingfileset>
-									
-									<classpathset dir="${project.build.outputDirectory}">
-									</classpathset>
+									<classpathset dir="${project.build.outputDirectory}"></classpathset>
 								</bind>
 							</tasks>
 						</configuration>
@@ -127,7 +110,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
@@ -195,8 +177,6 @@
 			<version>1.0</version>
 			<scope>test</scope>
 		</dependency>
-		
-		  
 		<dependency>
 			<groupId>org.jibx</groupId>
 			<artifactId>jibx-extras</artifactId>
@@ -213,7 +193,7 @@
 			<groupId>org.jibx</groupId>
 			<artifactId>jibx-run</artifactId>
 			<version>1.1.5</version>
-			<scope>compile</scope>		
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>bcel</groupId>
@@ -250,28 +230,28 @@
 			<version>20040801</version>
 			<scope>compile</scope>
 		</dependency>
-	    <dependency>
-	      <groupId>net.sf.saxon</groupId>
-	      <artifactId>saxon-dom</artifactId>
-	      <version>8.7</version>
-	      <scope>compile</scope>
-	    </dependency>
-	    <dependency>
-	      <groupId>dom4j</groupId>
-	      <artifactId>dom4j</artifactId>
-	      <version>1.6.1</version>
-	      <scope>compile</scope>
-	    </dependency>
-	    <dependency>
-	    	<groupId>net.sf.saxon</groupId>
-	    	<artifactId>saxon</artifactId>
-	    	<version>8.7</version>
-	    	<scope>compile</scope>
-	    </dependency>
-	    <dependency>
-	      	<groupId>com.maxmind.geoip</groupId>
-	      	<artifactId>geoip</artifactId>
-	      	<version>1.2.3</version>
-    	</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
+			<version>8.7</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon</artifactId>
+			<version>8.7</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.maxmind.geoip</groupId>
+			<artifactId>geoip</artifactId>
+			<version>1.2.3</version>
+		</dependency>
 	</dependencies>
 </project>
