--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -307,19 +307,27 @@
 				<filtering>true</filtering>
 			</testResource>
 		</testResources>
-		<!-- if no tests are present don't fail the complete package process -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<!-- send an announcement email on release -->
+					<!--  <preparationGoals>changes:announcement-mail</preparationGoals> -->
+					<!-- all the submodules inherit the version of the project -->
+					<autoVersionSubmodules>false</autoVersionSubmodules>
+					<!-- snaphots identified by timestamp are allowed -->
+					<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+				</configuration>
+			</plugin>
+			<!--			<plugin>-->
+			<!--				<groupId>org.apache.maven.plugins</groupId>-->
+			<!--				<artifactId>maven-changes-plugin</artifactId>-->
+			<!--				<version>2.0-20080211.215359-1</version>-->
+			<!--			</plugin>-->
+		</plugins>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<!--  if there are no tests, don't bail out -->
-						<failIfNoTests>false</failIfNoTests>
-						<!-- avoid the outofmemory exception thrown in some test scenarios-->
-						<argLine>-Xmx1200M</argLine>
-					</configuration>
-				</plugin>
-				
     		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -346,14 +354,14 @@
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
-    									org.zeroturnaround
-    								</groupId>
+											org.zeroturnaround
+										</groupId>
 										<artifactId>
-    									javarebel-maven-plugin
-    								</artifactId>
+											javarebel-maven-plugin
+										</artifactId>
 										<versionRange>
-    									[1.0.5,)
-    								</versionRange>
+											[1.0.5,)
+										</versionRange>
 										<goals>
 											<goal>generate</goal>
 										</goals>
@@ -362,8 +370,95 @@
 										<ignore></ignore>
 									</action>
 								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-antrun-plugin
+										</artifactId>
+										<versionRange>
+											[1.3,)
+										</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-ear-plugin
+										</artifactId>
+										<versionRange>
+											[2.4.2,)
+										</versionRange>
+										<goals>
+											<goal>
+												generate-application-xml
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											xmlbeans-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.3.3,)
+										</versionRange>
+										<goals>
+											<goal>xmlbeans</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											javacc-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.6,)
+										</versionRange>
+										<goals>
+											<goal>javacc</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<!--  if there are no tests, don't bail out -->
+						<failIfNoTests>false</failIfNoTests>
+						<!-- avoid the outofmemory exception thrown in some test scenarios-->
+						<argLine>-Xmx1200M</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
