implemented [PUBMAN-2235] Browse through the detailed views of lists (search results)
Item information in the ViewItemFull moved to the top and added some information


Former-commit-id: 303f66c41344aba123c7e35aa60ec9e0b7b5e4de

--- a/pubman/pubman_presentation/src/main/webapp/WEB-INF/web.xml
+++ b/pubman/pubman_presentation/src/main/webapp/WEB-INF/web.xml
@@ -113,6 +113,19 @@
  	 </context-param>     
     	
 
+<!-- 
+	<context-param>
+	   <param-name>org.richfaces.SKIN</param-name>
+	   <param-value>plain</param-value>
+	</context-param>
+
+
+
+	<context-param>
+      <param-name>org.richfaces.CONTROL_SKINNING</param-name>
+      <param-value>disable</param-value>
+	</context-param>
+-->
 	<filter> 
 	   <display-name>RichFaces Filter</display-name> 
 	   <filter-name>richfaces</filter-name> 
