--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -144,7 +144,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>xmlbeans</groupId>
+			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
 			<version>2.3.0</version>
 			<scope>compile</scope>
