--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -328,7 +328,17 @@
 					<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
 				</configuration>
 			</plugin>
-			<!--			<plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<useDefaultDelimiters>false</useDefaultDelimiters>
+					<delimiters>
+						<delimiter>${*}</delimiter>
+					</delimiters>
+				</configuration>
+			</plugin>			<!--			<plugin>-->
 			<!--				<groupId>org.apache.maven.plugins</groupId>-->
 			<!--				<artifactId>maven-changes-plugin</artifactId>-->
 			<!--				<version>2.0-20080211.215359-1</version>-->
@@ -463,7 +473,7 @@
 										<versionRange>[1.1.3,)</versionRange>
 										<goals>
 											<goal>generate</goal>
-										</goals>                   
+										</goals>
 									</pluginExecutionFilter>
 									<action>
 										<ignore></ignore>
