--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -357,113 +357,81 @@
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>org.codehaus.mojo</groupId>
-										<artifactId>
-    									axistools-maven-plugin
-    								</artifactId>
+										<artifactId>axistools-maven-plugin</artifactId>
 										<versionRange>[1.3,)</versionRange>
 										<goals>
 											<goal>wsdl2java</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute />
 									</action>
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.zeroturnaround
-										</groupId>
+										<groupId>org.zeroturnaround</groupId>
 										<artifactId>
 											javarebel-maven-plugin
 										</artifactId>
-										<versionRange>
-											[1.0.5,)
-										</versionRange>
+										<versionRange>[1.0.5,)</versionRange>
 										<goals>
 											<goal>generate</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute />
 									</action>
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>
-											[1.3,)
-										</versionRange>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-antrun-plugin</artifactId>
+										<versionRange>[1.3,)</versionRange>
 										<goals>
 											<goal>run</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore/>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-ear-plugin
-										</artifactId>
-										<versionRange>
-											[2.4.2,)
-										</versionRange>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-ear-plugin</artifactId>
+										<versionRange>[2.4.2,)</versionRange>
 										<goals>
-											<goal>
-												generate-application-xml
-											</goal>
+											<goal>generate-application-xml</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore/>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											xmlbeans-maven-plugin
-										</artifactId>
-										<versionRange>
-											[2.3.3,)
-										</versionRange>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>xmlbeans-maven-plugin</artifactId>
+										<versionRange>[2.3.3,)</versionRange>
 										<goals>
 											<goal>xmlbeans</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute/>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											javacc-maven-plugin
-										</artifactId>
-										<versionRange>
-											[2.6,)
-										</versionRange>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>javacc-maven-plugin</artifactId>
+										<versionRange>[2.6,)</versionRange>
 										<goals>
 											<goal>javacc</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute/>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
@@ -476,7 +444,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute/>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
