--- a/common_services/search/pom.xml
+++ b/common_services/search/pom.xml
@@ -39,13 +39,11 @@
 	<name>search</name>
 	<packaging>ejb</packaging>
 	<version>1.0.60-SNAPSHOT</version>
-
 	<scm>
 		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/search</connection>
 		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/search</developerConnection>
 		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -57,10 +55,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-       				<source>${jdk.version}</source>
-       				<target>${jdk.version}</target>
-     			</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -70,12 +64,12 @@
 					<execution>
 						<id>javacc</id>
 						<phase>generate-sources</phase>
-						<goals> 
+						<goals>
 							<goal>javacc</goal>
 						</goals>
 						<configuration>
-              				<buildParser>true</buildParser>
-            			</configuration>
+							<buildParser>true</buildParser>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -86,10 +80,26 @@
 					<test>SearchUnitTest</test>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/generated-sources/javacc/</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -114,11 +124,12 @@
 			<artifactId>structuredexportmanager</artifactId>
 			<version>1.0.63-SNAPSHOT</version>
 			<scope>compile</scope>
-	</dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.dspace</groupId>
 			<artifactId>cql-java</artifactId>
 			<version>1.3</version>
 			<scope>compile</scope>
-		</dependency></dependencies>
+		</dependency>
+	</dependencies>
 </project>
