--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -1,4 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+ CDDL HEADER START
+
+ The contents of this file are subject to the terms of the
+ Common Development and Distribution License, Version 1.0 only
+ (the "License"). You may not use this file except in compliance
+ with the License.
+
+ You can obtain a copy of the license at license/ESCIDOC.LICENSE
+ or http://www.escidoc.de/license.
+ See the License for the specific language governing permissions
+ and limitations under the License.
+
+ When distributing Covered Code, include this CDDL HEADER in each
+ file and include the License file at license/ESCIDOC.LICENSE.
+ If applicable, add the following below this CDDL HEADER, with the
+ fields enclosed by brackets "[]" replaced with your own identifying
+ information: Portions Copyright [yyyy] [name of copyright owner]
+
+ CDDL HEADER END
+
+
+ Copyright 2006-2012 Fachinformationszentrum Karlsruhe Gesellschaft
+ für wissenschaftlich-technische Information mbH and Max-Planck-
+ Gesellschaft zur Förderung der Wissenschaft e.V.
+ All rights reserved. Use is subject to license terms.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>pubman</artifactId>
@@ -11,13 +39,11 @@
 	<name>pubman_ear</name>
 	<packaging>ear</packaging>
 	<version>7.1.0-SNAPSHOT</version>
-	
 	<scm>
 		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
 		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
 		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
-	
 	<build>
 		<plugins>
 			<plugin>
@@ -217,19 +243,17 @@
 							<artifactId>trinidad-impl</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
-							     
 						-->
 						<jarModule>
-						  <groupId>org.richfaces.ui</groupId>
-					      <artifactId>richfaces-ui</artifactId>
-					      <includeInApplicationXml>true</includeInApplicationXml>
-					    </jarModule>
-					    <jarModule>
-						  <groupId>org.richfaces.framework</groupId>
-					      <artifactId>richfaces-impl</artifactId>
-					      <includeInApplicationXml>true</includeInApplicationXml>
-					    </jarModule>
-					    
+							<groupId>org.richfaces.ui</groupId>
+							<artifactId>richfaces-ui</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>org.richfaces.framework</groupId>
+							<artifactId>richfaces-impl</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 						<jarModule>
 							<groupId>commons-beanutils</groupId>
 							<artifactId>commons-beanutils</artifactId>
@@ -386,9 +410,37 @@
 					</items>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<skip>false</skip>
+<!--							<test>RetrieveTest</test>-->
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-	
 	<dependencies>
 		<dependency>
 			<groupId>axis</groupId>
@@ -591,17 +643,15 @@
 		</dependency>
 		-->
 		<dependency>
-	      <groupId>org.richfaces.ui</groupId>
-	      <artifactId>richfaces-ui</artifactId>
-	      <version>3.3.3.Final</version>
-	     
-    	</dependency>
-    	<dependency>
-	      <groupId>org.richfaces.framework</groupId>
-	      <artifactId>richfaces-impl</artifactId>
-	      <version>3.3.3.Final</version>
-	       
-	    </dependency>
+			<groupId>org.richfaces.ui</groupId>
+			<artifactId>richfaces-ui</artifactId>
+			<version>3.3.3.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces.framework</groupId>
+			<artifactId>richfaces-impl</artifactId>
+			<version>3.3.3.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
@@ -781,7 +831,6 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-	
 	<profiles>
 		<profile>
 			<id>jboss42</id>
@@ -824,7 +873,6 @@
 										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" todir="${project.build.directory}/jboss/server/conf" />
                                         <!-- copy over the validation datasource descriptor -->
 										<copy overwrite="true" file="${project.build.directory}/classes/pid-cache-ds.xml" todir="${project.build.directory}/jboss/server/deploy" />
-									
 									</tasks>
 								</configuration>
 							</execution>
@@ -850,7 +898,6 @@
                                             <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
                                             <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> </copy>
                                         -->
-									
 									</tasks>
 								</configuration>
 							</execution>
@@ -991,7 +1038,6 @@
 							</execution>
 						</executions>
 					</plugin>
-				
 				</plugins>
 			</build>
 		</profile>
