--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -514,7 +514,7 @@
 <!--			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>changelog-maven-plugin</artifactId>
+				<artifactId>maven-changelog-plugin</artifactId>
 				<version>2.0</version>
 			</plugin>
 			<plugin>
