--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -474,7 +474,7 @@
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
+				<artifactId>wagon-webdav-jackrabbit</artifactId>
 				<version>2.2</version>
 			</extension>
 			<extension>
