Adapted copyright information
Former-commit-id: 9ae9160b3b58353e1649bd69c7a6aa4605667096

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2012 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -281,6 +281,8 @@ escidoc.transformation.zfn.configuration.filename=${escidoc.transformation.zfn.c
 escidoc.transformation.bibtex.configuration.filename=${escidoc.transformation.bibtex.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
+escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
 
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
 
