--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -870,6 +870,8 @@
                                         <!-- copy over the configuration file -->
 										<copy overwrite="true" file="${project.build.directory}/classes/pubman.properties" todir="${project.build.directory}/jboss/server/conf" />
                                         <!-- copy over the aa configuration file -->
+										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" tofile="${project.build.directory}/jboss/server/conf/cone.properties" />
+                                        <!-- copy over the aa configuration file -->
 										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" todir="${project.build.directory}/jboss/server/conf" />
                                         <!-- copy over the validation datasource descriptor -->
 										<copy overwrite="true" file="${project.build.directory}/classes/pid-cache-ds.xml" todir="${project.build.directory}/jboss/server/deploy" />
