--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -157,7 +157,12 @@
 		  <artifactId>tika-core</artifactId>
 		  <version>1.1</version>
 		</dependency>
-	 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	
 </project>
