--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -243,7 +243,8 @@
 							<artifactId>trinidad-impl</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
-						-->
+						
+						
 						<jarModule>
 							<groupId>org.richfaces.ui</groupId>
 							<artifactId>richfaces-ui</artifactId>
@@ -254,6 +255,13 @@
 							<artifactId>richfaces-impl</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>org.apache.tika</groupId>
+							<artifactId>tika-core</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						-->
+						
 						<jarModule>
 							<groupId>commons-beanutils</groupId>
 							<artifactId>commons-beanutils</artifactId>
@@ -641,7 +649,8 @@
 			<version>1.2.6</version>
 			<scope>provided</scope>
 		</dependency>
-		-->
+		
+		
 		<dependency>
 			<groupId>org.richfaces.ui</groupId>
 			<artifactId>richfaces-ui</artifactId>
@@ -652,6 +661,13 @@
 			<artifactId>richfaces-impl</artifactId>
 			<version>3.3.3.Final</version>
 		</dependency>
+		<dependency>
+		  <groupId>org.apache.tika</groupId>
+		  <artifactId>tika-core</artifactId>
+		  <version>1.1</version>
+		</dependency>
+		-->
+		
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
