--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -133,7 +133,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
