--- a/common_services/dataacquisition_ear/src/test/resources/log4j.properties
+++ b/common_services/dataacquisition_ear/src/test/resources/log4j.properties
@@ -25,15 +25,13 @@
 # All rights reserved. Use is subject to license terms.
 
 # Set root category priority to DEBUG and set its only appender to MyConsoleAppender
-log4j.rootLogger=DEBUG
+log4j.rootLogger=INFO, MyConsoleAppender
 
 log4j.logger.test=DEBUG, MyConsoleAppender
-log4j.logger.de.mpg.escidoc=INFO,MyConsoleAppender
+log4j.additivity.test=true
+log4j.logger.de.mpg.escidoc=DEBUG, MyConsoleAppender
+log4j.additivity.de.mpg.escidoc=false
 
-# MyConsoleAppender is set to be a ConsoleAppender (writes to system console).
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
-
-# MyConsoleAppender uses PatternLayout.
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-#log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p [%F] %m%n
