Former-commit-id: fd7d5c71cee9caffef78803b44b04e904a375411

--- a/pubman/pubman_presentation/src/main/webapp/WEB-INF/web.xml
+++ b/pubman/pubman_presentation/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 		-->
 	<context-param>
 		<param-name>com.sun.faces.disableUnicodeEscaping</param-name>
-		<param-value>true</param-value>
+		<param-value>auto</param-value>
 	</context-param>
 	
 
